@@ -1,3 +1,0 @@
-[actions]
-action.success=redirect_to_action:string:edit
-action.success_no_edit=redirect_to_action:string:view
